TEST_PROGRAMS/INVALID/08/nestedTypeBlock.go
package main;
type (
    num int;
    type decimal float64;
);
